# pulz

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: audit-check.yml  bloat.yml  rust.yml
benches/: Cargo.toml
benches/benches/: ecs_world.rs
crates/app/: CHANGELOG.md  Cargo.toml  README.md
crates/app/src/: app_exit.rs  graceful_exit.rs  lib.rs  lifecycle.rs  schedules.rs  time.rs
crates/arena/: CHANGELOG.md  Cargo.toml  README.md
crates/arena/src/: lib.rs
crates/assets/: CHANGELOG.md  Cargo.toml  README.md
crates/assets-loader/: CHANGELOG.md  Cargo.toml  README.md
crates/assets-loader/src/: lib.rs  path.rs
crates/assets-loader/src/platform/: android.rs  fs.rs  mod.rs  wasm.rs
crates/assets/src/: lib.rs
crates/bitset/: CHANGELOG.md  Cargo.toml  README.md
crates/bitset/src/: lib.rs
crates/ecs/: CHANGELOG.md  Cargo.toml  README.md
crates/ecs/macros/: Cargo.toml
crates/ecs/macros/src/: bundle.rs  component.rs  lib.rs  utils.rs
crates/ecs/src/: archetype.rs  component.rs  entity.rs  entity_ref.rs  lib.rs  removed.rs  resource.rs  schedule.rs  storage.rs  world.rs
crates/ecs/src/query/: exec.rs  fetch.rs  filter.rs  mod.rs  one.rs  query.rs  traits.rs
crates/ecs/src/system/: mod.rs  param.rs  system_fn.rs
crates/ecs/src/world/: entity_ref.rs  mod.rs
crates/executor/: CHANGELOG.md  Cargo.toml  README.md
crates/executor/src/: lib.rs
crates/functional-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/functional-utils/macros/: Cargo.toml
crates/functional-utils/macros/src/: generate_variadic_array.rs  lib.rs
crates/functional-utils/src/: func.rs  lib.rs  tuple.rs
crates/functional-utils/src/func/: bind.rs  future.rs
crates/functional-utils/src/tuple/: convert.rs  map.rs  ops.rs
crates/input/: CHANGELOG.md  Cargo.toml  README.md
crates/input/src/: lib.rs
crates/render/: CHANGELOG.md  Cargo.toml  README.md
crates/render-ash/: CHANGELOG.md  Cargo.toml  README.md
crates/render-ash/examples/: render-ash-demo.rs
crates/render-ash/src/: alloc.rs  attachments.rs  convert.rs  debug_utils.rs  device.rs  drop_guard.rs  encoder.rs  graph.rs  instance.rs  lib.rs  resources.rs  shader.rs  swapchain.rs
crates/render-ash/src/resources/: mod.rs  replay.rs  resource_impl.rs  traits.rs
crates/render-pipeline-core/: CHANGELOG.md  Cargo.toml  README.md
crates/render-pipeline-core/src/: common.rs  lib.rs
crates/render-pipeline-core/src/core_3d/: mod.rs
crates/render-pipeline-core/src/deferred_3d/: mod.rs
crates/render-wgpu/: CHANGELOG.md  Cargo.toml  README.md
crates/render-wgpu/examples/: render-wgpu-demo.rs
crates/render-wgpu/src/: backend.rs  convert.rs  graph.rs  lib.rs  resources.rs  surface.rs
crates/render/macros/: Cargo.toml
crates/render/macros/src/: binding_layout.rs  compile_shader.rs  lib.rs  utils.rs
crates/render/src/: backend.rs  buffer.rs  cache.rs  camera.rs  draw.rs  lib.rs  pipeline.rs  render_asset.rs  render_resource.rs  surface.rs  utils.rs  view.rs
crates/render/src/graph/: access.rs  builder.rs  deps.rs  mod.rs  resources.rs
crates/render/src/graph/pass/: builder.rs  mod.rs  run.rs
crates/render/src/mesh/: mod.rs
crates/render/src/pass/: graphics_pass.rs  mod.rs
crates/render/src/pipeline/: binding.rs  compute_pipeline.rs  descriptor.rs  graphics_pass.rs  graphics_pipeline.rs  mod.rs  pipeline.rs  pipeline_layout.rs  ray_tracing_pipeline.rs  specialization.rs
crates/render/src/render_graph/: context.rs  graph.rs  mod.rs  slot.rs
crates/render/src/render_graph/node/: mod.rs  swapchain.rs
crates/render/src/render_graph/node/simple/: mod.rs  simple.wgsl
crates/render/src/shader/: mod.rs  preprocessor.rs
crates/render/src/texture/: descriptor.rs  image.rs  mod.rs
crates/render/src/view/: mod.rs  surface.rs
crates/schedule/: CHANGELOG.md  Cargo.toml  README.md
crates/schedule/macros/: Cargo.toml
crates/schedule/macros/src/: attrib_system.rs  attrib_system_module.rs  derive_system_data.rs  lib.rs  utils.rs
crates/schedule/src/: atom.rs  event.rs  label.rs  lib.rs  local.rs  meta.rs  module.rs  resource.rs  schedule.rs  threadpool.rs  util.rs
crates/schedule/src/resource/: id.rs  mod.rs  resource_access.rs  resources.rs  system_state.rs
crates/schedule/src/schedule/: debug.rs  dump.rs  execution.rs  graph.rs  mod.rs  resource_tracker.rs  run.rs  schedule.rs  schedule_impl.rs
crates/schedule/src/system/: boxed.rs  data.rs  func_system.rs  mod.rs  param.rs  system_fn.rs
crates/transform/: CHANGELOG.md  Cargo.toml  README.md
crates/transform/src/: lib.rs
crates/transform/src/components/: mod.rs  parent.rs  transform.rs
crates/window/: CHANGELOG.md  Cargo.toml  README.md
crates/window-winit/: CHANGELOG.md  Cargo.toml  README.md
crates/window-winit/examples/: window-winit-demo.rs
crates/window-winit/src/: lib.rs
crates/window/src/: event.rs  lib.rs  listener.rs  window.rs
crates/winit/: CHANGELOG.md  Cargo.toml  README.md
crates/winit/examples/: winit-demo.rs
crates/winit/src/: app.rs  lib.rs  windows.rs
examples/android/: Cargo.toml  build.gradle  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/androidTest/java/eu/chommel/pulzdemo/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/eu/chommel/pulzdemo/: MainActivity.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/android/app/src/test/java/eu/chommel/pulzdemo/: ExampleUnitTest.kt
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/android/src/: lib.rs
run-wasm/: Cargo.toml
src/: lib.rs
