[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/*/macros",
  "benches"
]
default-members = [
  "crates/*"
]

[workspace.package]
version = "0.1.0-alpha"
authors = ["Christoph Hommelsheim <main@chommel.en>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
bit-set = "0.8"
slotmap = "1.0"
fnv = "1.0"
threadpool = "1.8"
tracing = "0.1"
backtrace = "0.3"
atomic_refcell = "0.1"
crossbeam-utils = "0.8"
darling = "0.21"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro-crate = "3.3"
