[workspace]
resolver = "2"
members = [
  "crates/*/macros",
  "crates/*",
  "benches"
]
default-members = [
  "crates/*"
]

[package]
name = "pulz"
description = "A high-performance ECS and scheduling framework for Rust applications."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
pulz-schedule.workspace = true
pulz-ecs.workspace = true
pulz-app.workspace = true

[workspace.package]
version = "0.1.0-alpha2"
authors = ["Christoph Hommelsheim <main@chommel.en>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
bit-set = "0.8"
slotmap = "1.0"
fnv = "1.0"
threadpool = "1.8"
tracing = "0.1"
backtrace = "0.3"
atomic_refcell = "0.1"
crossbeam-utils = "0.8"
darling = "0.21"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro-crate = "3.4"

pulz-schedule = { version = "0.1.0-alpha2", path = "crates/schedule" }
pulz-ecs = { version = "0.1.0-alpha", path = "crates/ecs" }
pulz-app = { version = "0.1.0-alpha", path = "crates/app" }
pulz-bitset = { version = "0.1.0-alpha", path = "crates/bitset" }
pulz-arena = { version = "0.1.0-alpha", path = "crates/arena" }
pulz-functional-utils = { version = "0.1.0-alpha", path = "crates/functional-utils" }
