[package]
name = "pulz-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[features]
tracing-subscriber-init = ["dep:tracing-subscriber", "dep:wasm-tracing", "dep:console_error_panic_hook", "dep:tracing-log"]

[dependencies]
pulz-schedule.path = "../schedule"
ctrlc = "3.5"
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-tracing = { version = "2", features = ["tracing-log"], optional = true }
tracing-log = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
