[package]
name = "pulz-arena"
description = "A generational arena allocator with compact generational indices"
version = "0.4.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["arena", "generational", "collection"]
categories = ["data-structures", "game-development", "no-std"]
readme = "README.md"

[dependencies]
