[package]
name = "pulz-assets-loader"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
pulz-ecs = { path = "../ecs" }
pulz-assets = { path = "../assets" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blocking  = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [ 'Request', 'Response', "Window", ]}

[target.'cfg(target_os = "android")'.dependencies]
ndk = { workspace = true }
ndk-glue = { workspace = true }
