[package]
name = "pulz-assets-loader"
version = "0.1.0"
authors = ["Christoph Hommelsheim <main@chommel.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"
edition = "2021"


[dependencies]
ecs = { package = "pulz-ecs", path = "../ecs" }
assets = { package = "pulz-assets", path = "../assets" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blocking  = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [ 'Request', 'Response', "Window", ]}

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.6.0"
ndk-glue = "0.6.0"
