[package]
name = "pulz-assets"
version = "0.1.0"
authors = ["Christoph Hommelsheim <main@chommel.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"
edition = "2021"


[dependencies]
schedule = { package = "pulz-schedule", path = "../schedule" }

slotmap = "1.0"
