[package]
name = "pulz-bitset"
description = "A simple bitset implementation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["bitset", "collection"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
