[package]
name = "pulz-ecs"
description = "An archetype based ECS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["ecs", "game"]
categories = ["data-structures", "game-engines", "game-development"]
readme = "README.md"

[dependencies]
pulz-bitset = { version = "0.1.0-alpha", path = "../bitset" }
pulz-schedule = { version = "0.1.0-alpha", path = "../schedule" }
pulz-ecs-macros = { version = "0.1.0-alpha", path = "macros" }
pulz-functional-utils = { version = "0.1.0-alpha", path = "../functional-utils" }

slotmap = { workspace = true }
