[package]
name = "pulz-ecs"
description = "An archetype based ECS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["ecs", "game"]
categories = ["data-structures", "game-engines", "game-development"]
readme = "README.md"

[dependencies]
pulz-bitset.workspace = true
pulz-schedule.workspace = true
pulz-functional-utils.workspace = true
pulz-ecs-macros = { version = "=0.1.0-alpha", path = "macros" }

slotmap.workspace = true
