[package]
name = "pulz-executor"
description = "Abstractions of some async runtimes"
version = "0.1.0"
authors = ["Christoph Hommelsheim <main@chommel.eu>"]
license = "MIT OR Apache-2.0"
keywords = ["async", "executor", "pulz"]
categories = ["asynchronous"]
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"
edition = "2021"

[features]
#default = ["async-std"]

[dependencies]
tokio = { version = "1.12", features = ["rt"], default-features = false, optional = true }
async-std = { version = "1.10", optional = true }

[target.'cfg(not(target_os = "unknown"))'.dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }

[package.metadata.docs.rs]
features = ["tokio", "async-std"]
