[package]
name = "pulz-functional-utils"
description = "traits and macros to work with tuples and functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["traits", "functional", "generic programming"]
categories = ["rust-patterns"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["full",  "unstable"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
tuple = []
tuple-ops = ["tuple"]
tuple-map = ["tuple"]
tuple-convert = ["tuple"]
func = ["tuple"]
func-bind = ["func"]
func-future = ["func"]

full = [
    "tuple",
    "tuple-ops",
    "tuple-map",
    "tuple-convert",
    "func",
    "func-bind",
    "func-future"
]
unstable = []

[dependencies]
pulz-functional-utils-macros = { version = "=0.1.0-alpha2", path = "macros" }

[dev-dependencies]
pulz-functional-utils = { path = ".", features = ["tuple", "tuple-ops", "tuple-map", "tuple-convert", "func", "func-bind", "func-future"] }
pollster = { version = "0.4", features = ["macro"] }
