[package]
name = "pulz-render-wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
pulz-ecs = { path = "../ecs" }
pulz-window = { path = "../window" }
pulz-render = { path = "../render" }

thiserror = { workspace = true }
tracing = { workspace = true }
slotmap = { workspace = true }
wgpu = "0.16"
raw-window-handle = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[dev-dependencies]
anyhow = { workspace = true }
naga = "0.12"
pulz-window-winit = { path = "../window-winit" }
pulz-render-pipeline-core = { path = "../render-pipeline-core" }

[target.'cfg(not(target_os = "unknown"))'.dev-dependencies]
tracing-subscriber = { workspace = true }
async-std = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wgpu = { version = "0.16" , features = ["webgl"] }
tracing-wasm = { workspace = true }
tracing-log = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }
wasm-bindgen-futures = { workspace = true }
