[package]
name = "pulz-render-wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[features]
# uncomment if Uncomment once we get to https://github.com/gfx-rs/wgpu/issues/5974 is resolved
# trace = ["wgpu/trace"]

[dependencies]
pulz-ecs = { path = "../ecs" }
pulz-window = { path = "../window" }
pulz-render = { path = "../render" }

thiserror = { workspace = true }
tracing = { workspace = true }
slotmap = { workspace = true }
wgpu = "25.0"
raw-window-handle = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[dev-dependencies]
naga = "25.0"
pulz-window-winit = { path = "../window-winit" }
pulz-render-pipeline-core = { path = "../render-pipeline-core" }

[target.'cfg(not(target_os = "unknown"))'.dev-dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wgpu = { version = "25.0" , features = ["webgl"] }
tracing-wasm = { workspace = true }
tracing-log = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }
wasm-bindgen-futures = { workspace = true }
