[package]
name = "pulz-schedule"
description = "For scheduling systems and managing their resources"
version = "0.1.0-alpha"
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords = ["ecs", "systems", "schedule", "resources"]
categories = ["data-structures", "game-engines", "game-development", "asynchronous"]
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"

[dependencies]
pulz-functional-utils = { version = "0.1.0-alpha", path = "../functional-utils" }

bit-set = { workspace = true }
fnv = { workspace = true }
atomic_refcell = { workspace = true }
crossbeam-utils = { workspace = true }
backtrace = { workspace = true }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
threadpool = { workspace = true }
