[package]
name = "pulz-schedule"
description = "For scheduling systems and managing their resources"
version = "0.1.0-alpha2"
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords = ["ecs", "systems", "schedule", "resources"]
categories = ["data-structures", "game-engines", "game-development", "asynchronous"]
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"

[dependencies]
pulz-functional-utils = { workspace = true, features = ["func"]}
pulz-schedule-macros = { version = "=0.1.0-alpha2", path = "macros" }

bit-set.workspace = true
fnv.workspace = true
atomic_refcell.workspace = true
crossbeam-utils.workspace = true
thiserror = "2"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
threadpool.workspace = true
