[package]
name = "pulz-window"
version = "0.1.0"
authors = ["Christoph Hommelsheim <main@chommel.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
readme = "README.md"
edition = "2021"

[dependencies]
ecs = { package = "pulz-ecs", path = "../ecs" }

slotmap = "1.0"
glam = { version = "0.20", features = ["mint", "bytemuck"] }
raw-window-handle = "0.4"
