[package]
name = "pulz-window"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
pulz-ecs = { path = "../ecs" }
raw-window-handle = { workspace = true }

slotmap = { workspace = true }
glam = { workspace = true, features = ["mint", "bytemuck"] }
