[package]
name = "pulz-winit"
description = "Winit backend for pulz-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = ["x11", "wayland"]
x11 = [ "winit/x11" ]
wayland = [ "winit/wayland", "winit/wayland-dlopen" ]

[dependencies]
pulz-schedule.workspace = true
pulz-app.workspace = true
tracing.workspace = true
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
raw-window-handle = "0.6"

[dev-dependencies]
pulz-app = { workspace = true, features = ["tracing-subscriber-init"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
