[package]
name = "example-android"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name="pulzdemo_android"
crate_type=["cdylib"]

[dependencies]
pulz-ecs = { path = "../../crates/ecs" }
pulz-render = { path = "../../crates/render" }
pulz-render-ash = { path = "../../crates/render-ash" }
pulz-render-pipeline-core = { path = "../../crates/render-pipeline-core" }
pulz-window = { path = "../../crates/window" }
pulz-window-winit = { path = "../../crates/window-winit", features = ["android-game-activity"]}

log = "0.4"
android_logger = "0.13"
tracing = { workspace = true, features = ["log"] }
