[package]
name = "pulz-ecs-macros"
description = "Proc-Macros for pulz-ecs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["ecs", "game"]
categories = ["data-structures", "game-engines", "game-development"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro-crate = { workspace = true }
