[package]
name = "pulz-functional-utils-macros"
description = "Proc-Macros for writing macros with variadic tuples and functions"
version = "0.1.0-alpha"
authors = ["Christoph Hommelsheim <main@chommel.en>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/pulz.git"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
