[package]
name = "pulz-functional-utils-macros"
description = "Proc-Macros for writing macros with variadic tuples and functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["traits", "functional", "generic programming", "macros"]
categories = ["rust-patterns"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
