[package]
name = "pulz-schedule-macros"
description = "Proc-Macros for pulz-schedule for defining systems"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["ecs", "systems", "macros"]
categories = ["data-structures", "game-engines", "game-development", "asynchronous"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["visit-mut"]}
quote = { workspace = true }
proc-macro-crate = { workspace = true }
